--- a/index.html
+++ b/index.html
@@ -572,52 +572,6 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 col-lg-3 ftco-animate d-flex">
-            <div class="staff">
-              <div class="img-wrap d-flex align-items-stretch">
-                <div
-                  class="img align-self-stretch"
-                  style="background-image: url(images/staff-3.jpg)"
-                ></div>
-              </div>
-              <div class="text pt-3 px-3 pb-4 text-center">
-                <h3>Subhadip Ghosh</h3>
-                <span class="position mb-2">Admin Head</span>
-                <div class="faded">
-                  <ul class="ftco-social text-center">
-                    <li class="ftco-animate">
-                      <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-center"
-                        ><span class="fa fa-twitter"></span
-                      ></a>
-                    </li>
-                    <li class="ftco-animate">
-                      <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-center"
-                        ><span class="fa fa-facebook"></span
-                      ></a>
-                    </li>
-                    <li class="ftco-animate">
-                      <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-center"
-                        ><span class="fa fa-google"></span
-                      ></a>
-                    </li>
-                    <li class="ftco-animate">
-                      <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-center"
-                        ><span class="fa fa-instagram"></span
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </section>
@@ -1106,7 +1060,7 @@
                 </div>
                 <h4 class="heading-2">Premium Plan</h4>
                 <span class="price"
-                  ><sup>₹</sup> <span class="number">999</span></span
+                  ><sup>₹</sup> <span class="number">899</span></span
                 >
 
                 <ul class="pricing-text mb-5">
@@ -1195,8 +1149,7 @@
                   </li>
                   <li>
                     <span class="fa fa-check mr-2"></span>Subscription typically
-                    includes 8 pieces of business attire per month, suitable for
-                    professionals requiring regular garment care
+                    includes 8 pieces of business attire per month.
                   </li>
                   <li><span class="fa fa-check mr-2"></span>Deep cleaning</li>
                   <li>
