--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
               >
                 <div class="block-18">
                   <div class="text">
-                    <strong class="number" data-number="45">0</strong>
+                    <strong class="number" data-number="2">0</strong>
                   </div>
                   <div class="text">
                     <span>Years of <br />Experienced</span>
@@ -311,7 +311,7 @@
               >
                 <div class="block-18">
                   <div class="text">
-                    <strong class="number" data-number="2342">0</strong>
+                    <strong class="number" data-number="500">0</strong>
                   </div>
                   <div class="text">
                     <span>Happy <br />Customers</span>
@@ -323,10 +323,10 @@
               >
                 <div class="block-18">
                   <div class="text">
-                    <strong class="number" data-number="30">0</strong>
+                    <strong class="number" data-number="4000">0</strong>
                   </div>
                   <div class="text">
-                    <span>Building <br />Cleaned</span>
+                    <span>Clothes <br />Cleaned</span>
                   </div>
                 </div>
               </div>
