--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <div class="col-md-6 ftco-animate">
             <h2 class="subheading">Leave the Laundry cleaning chores to us</h2>
             <h1 class="mb-4">
-              Let us do the dirty work, so you don't have to.
+              Enjoy more free time while we take care of your laundry needs!
             </h1>
             <p>
               <a href="#" class="btn btn-primary mr-md-4 py-2 px-4"
