--- a/index.html
+++ b/index.html
@@ -259,14 +259,9 @@
                     <h4>Opening Days:</h4>
                     <p class="pl-3">
                       <span
-                        ><strong>Monday – Friday:</strong> 9am to 20 pm</span
+                        ><strong>Monday – Sunday:</strong> 9:00am to
+                        8:00pm</span
                       >
-                      <span><strong>Saturday :</strong> 9am to 17 pm</span>
-                    </p>
-                    <h4>Vacations:</h4>
-                    <p class="pl-3">
-                      <span>All Sunday Days</span>
-                      <span>All Official Holidays</span>
                     </p>
                   </div>
                 </div>
@@ -694,7 +689,7 @@
               </a>
               <div class="desc w-100 px-4 text-center pt-5 mt-5">
                 <div class="text w-100 mb-3 mt-4">
-                  <h2><a href="work-single.html">House Cleaning</a></h2>
+                  <h2><a href="work-single.html">Wash and Fold</a></h2>
                 </div>
               </div>
             </div>
@@ -712,7 +707,7 @@
               </a>
               <div class="desc w-100 px-4 text-center pt-5 mt-5">
                 <div class="text w-100 mb-3 mt-4">
-                  <h2><a href="work-single.html">Window Cleaning</a></h2>
+                  <h2><a href="work-single.html">Wash and Iron</a></h2>
                 </div>
               </div>
             </div>
@@ -730,7 +725,7 @@
               </a>
               <div class="desc w-100 px-4 text-center pt-5 mt-5">
                 <div class="text w-100 mb-3 mt-4">
-                  <h2><a href="work-single.html">Pool Cleaning</a></h2>
+                  <h2><a href="work-single.html">Dry Cleaning</a></h2>
                 </div>
               </div>
             </div>
@@ -748,7 +743,7 @@
               </a>
               <div class="desc w-100 px-4 text-center pt-5 mt-5">
                 <div class="text w-100 mb-3 mt-4">
-                  <h2><a href="work-single.html">Office Cleaning</a></h2>
+                  <h2><a href="work-single.html">Stain Removal</a></h2>
                 </div>
               </div>
             </div>
@@ -767,7 +762,7 @@
               </a>
               <div class="desc w-100 px-4 text-center pt-5 mt-5">
                 <div class="text w-100 mb-3 mt-4">
-                  <h2><a href="work-single.html">Carpet Cleaning</a></h2>
+                  <h2><a href="work-single.html">Iron and Pressing</a></h2>
                 </div>
               </div>
             </div>
@@ -785,7 +780,7 @@
               </a>
               <div class="desc w-100 px-4 text-center pt-5 mt-5">
                 <div class="text w-100 mb-3 mt-4">
-                  <h2><a href="work-single.html">Garden Cleaning</a></h2>
+                  <h2><a href="work-single.html">Deep Cleaning</a></h2>
                 </div>
               </div>
             </div>
@@ -803,7 +798,7 @@
               </a>
               <div class="desc w-100 px-4 text-center pt-5 mt-5">
                 <div class="text w-100 mb-3 mt-4">
-                  <h2><a href="work-single.html">Carpet Cleaning</a></h2>
+                  <h2><a href="work-single.html">Suit Cleaning</a></h2>
                 </div>
               </div>
             </div>
@@ -821,7 +816,9 @@
               </a>
               <div class="desc w-100 px-4 text-center pt-5 mt-5">
                 <div class="text w-100 mb-3 mt-4">
-                  <h2><a href="work-single.html">Pool Cleaning</a></h2>
+                  <h2>
+                    <a href="work-single.html">Pressing and wrinkle Remove</a>
+                  </h2>
                 </div>
               </div>
             </div>
