--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
               <a
                 href="blog-single.html"
                 class="block-20 rounded"
-                style="background-image: url('images/image_2.jpg')"
+                style="background-image: url('images/carousel-1.jpg')"
               >
               </a>
               <div class="text mt-3 px-4">
@@ -896,7 +896,7 @@
               <a
                 href="blog-single.html"
                 class="block-20 rounded"
-                style="background-image: url('images/image_3.jpg')"
+                style="background-image: url('images/carousel-1.jpg')"
               >
               </a>
               <div class="text mt-3 px-4">
