--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
               <span class="subheading">Team &amp; Staff</span>
               <h2>Our Team</h2>
               <p>
-                At Laugh-O-Laundry, We take pride in our teamwork and commitment
+                At Laugh-O-Laundry, we take pride in our teamwork and commitment
                 to excellence, working tirelessly to make sure you always look
                 and feel your best. Meet the faces behind the magic – our
                 incredible team at Laugh-O-Laundry!
@@ -419,100 +419,108 @@
               <p><a href="#" class="btn btn-secondary">View All Staff</a></p>
             </div>
           </div>
-          <div class="col-md-6 col-lg-6 ftco-animate d-flex">
-            <div class="staff">
-              <div class="img-wrap d-flex align-items-stretch">
-                <div
-                  class="img align-self-stretch"
-                  style="background-image: url(images/staff-1.jpg)"
-                ></div>
+          <div class="col-md-12 col-lg-9">
+            <div class="row">
+              <div class="col-md-6 col-lg-6 ftco-animate d-flex">
+                <div class="staff">
+                  <div class="img-wrap d-flex align-items-stretch">
+                    <div
+                      class="img align-self-stretch"
+                      style="background-image: url(images/staff-1.jpg)"
+                    ></div>
+                  </div>
+                  <div class="text pt-3 px-3 pb-4 text-center">
+                    <h3>Sourav Chatterjee</h3>
+                    <span class="position mb-2">Founder</span>
+                    <div class="faded">
+                      <ul class="ftco-social text-center">
+                        <li class="ftco-animate">
+                          <a
+                            href="#"
+                            class="d-flex align-items-center justify-content-center"
+                            ><span class="fa fa-twitter"></span
+                          ></a>
+                        </li>
+                        <li class="ftco-animate">
+                          <a
+                            href="#"
+                            class="d-flex align-items-center justify-content-center"
+                            ><span class="fa fa-facebook"></span
+                          ></a>
+                        </li>
+                        <li class="ftco-animate">
+                          <a
+                            href="#"
+                            class="d-flex align-items-center justify-content-center"
+                            ><span class="fa fa-google"></span
+                          ></a>
+                        </li>
+                        <li class="ftco-animate">
+                          <a
+                            href="#"
+                            class="d-flex align-items-center justify-content-center"
+                            ><span class="fa fa-instagram"></span
+                          ></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="text pt-3 px-3 pb-4 text-center">
-                <h3>Sourav Chatterjee</h3>
-                <span class="position mb-2">Founder</span>
-                <div class="faded">
-                  <ul class="ftco-social text-center">
-                    <li class="ftco-animate">
-                      <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-center"
-                        ><span class="fa fa-twitter"></span
-                      ></a>
-                    </li>
-                    <li class="ftco-animate">
-                      <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-center"
-                        ><span class="fa fa-facebook"></span
-                      ></a>
-                    </li>
-                    <li class="ftco-animate">
-                      <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-center"
-                        ><span class="fa fa-google"></span
-                      ></a>
-                    </li>
-                    <li class="ftco-animate">
-                      <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-center"
-                        ><span class="fa fa-instagram"></span
-                      ></a>
-                    </li>
-                  </ul>
+              <div class="col-md-6 col-lg-6 ftco-animate d-flex">
+                <div class="staff">
+                  <div class="img-wrap d-flex align-items-stretch">
+                    <div
+                      class="img align-self-stretch"
+                      style="background-image: url(images/staff-2.jpg)"
+                    ></div>
+                  </div>
+                  <div class="text pt-3 px-3 pb-4 text-center">
+                    <h3>Shivendra Verma</h3>
+                    <span class="position mb-2">Founder</span>
+                    <div class="faded">
+                      <ul class="ftco-social text-center">
+                        <li class="ftco-animate">
+                          <a
+                            href="#"
+                            class="d-flex align-items-center justify-content-center"
+                            ><span class="fa fa-twitter"></span
+                          ></a>
+                        </li>
+                        <li class="ftco-animate">
+                          <a
+                            href="#"
+                            class="d-flex align-items-center justify-content-center"
+                            ><span class="fa fa-facebook"></span
+                          ></a>
+                        </li>
+                        <li class="ftco-animate">
+                          <a
+                            href="#"
+                            class="d-flex align-items-center justify-content-center"
+                            ><span class="fa fa-google"></span
+                          ></a>
+                        </li>
+                        <li class="ftco-animate">
+                          <a
+                            href="#"
+                            class="d-flex align-items-center justify-content-center"
+                            ><span class="fa fa-instagram"></span
+                          ></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
+            <!-- .row -->
           </div>
-          <div class="col-md-6 col-lg-6 ftco-animate d-flex">
-            <div class="staff">
-              <div class="img-wrap d-flex align-items-stretch">
-                <div
-                  class="img align-self-stretch"
-                  style="background-image: url(images/staff-2.jpg)"
-                ></div>
-              </div>
-              <div class="text pt-3 px-3 pb-4 text-center">
-                <h3>Shivendra Verma</h3>
-                <span class="position mb-2">Founder</span>
-                <div class="faded">
-                  <ul class="ftco-social text-center">
-                    <li class="ftco-animate">
-                      <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-center"
-                        ><span class="fa fa-twitter"></span
-                      ></a>
-                    </li>
-                    <li class="ftco-animate">
-                      <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-center"
-                        ><span class="fa fa-facebook"></span
-                      ></a>
-                    </li>
-                    <li class="ftco-animate">
-                      <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-center"
-                        ><span class="fa fa-google"></span
-                      ></a>
-                    </li>
-                    <li class="ftco-animate">
-                      <a
-                        href="#"
-                        class="d-flex align-items-center justify-content-center"
-                        ><span class="fa fa-instagram"></span
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
+          <!-- .col-md-9 -->
         </div>
+        <!-- .row -->
       </div>
+      <!-- .container -->
     </section>
 
     <section class="ftco-section testimony-section ftco-bg-dark">
