--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
           <div class="col-md-6 ftco-animate">
             <h2 class="subheading">Leave the Laundry cleaning chores to us</h2>
             <h1 class="mb-4">
-              Enjoy more free time while we take care of your laundry needs!
+              Enjoy one Day Free Pickup and Delivery so that you take care of
+              your laundry needs.
             </h1>
             <p>
               <a href="#" class="btn btn-primary mr-md-4 py-2 px-4"
