--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <!-- END nav -->
     <div
       class="hero-wrap js-fullheight"
-      style="background-image: url('images/carousel-1.jpg  ')"
+      style="background-image: url('images/carousel-1.jpg')"
       data-stellar-background-ratio="0.5"
     >
       <div class="overlay"></div>
@@ -427,7 +427,7 @@
                   <div class="img-wrap d-flex align-items-stretch">
                     <div
                       class="img align-self-stretch"
-                      style="background-image: url(images/staff-1.jpg)"
+                      style="background-image: url(images/carousel-2.jpg)"
                     ></div>
                   </div>
                   <div class="text pt-3 px-3 pb-4 text-center">
@@ -473,7 +473,7 @@
                   <div class="img-wrap d-flex align-items-stretch">
                     <div
                       class="img align-self-stretch"
-                      style="background-image: url(images/staff-2.jpg)"
+                      style="background-image: url(images/carousel-2.jpg)"
                     ></div>
                   </div>
                   <div class="text pt-3 px-3 pb-4 text-center">
