--- a/index.html
+++ b/index.html
@@ -862,11 +862,10 @@
                   </div>
                 </div>
                 <h3 class="heading">
-                  <a href="#">10 Tips to clean your window</a>
+                  <a href="#">10 Tips to maintain your cloths</a>
                 </h3>
                 <p>
-                  Far far away, behind the word mountains, far from the
-                  countries Vokalia and Consonantia.
+                  Keep It Clean, Keep It Fresh: Your Clothes Deserve the Best!
                 </p>
               </div>
             </div>
@@ -891,12 +890,9 @@
                   </div>
                 </div>
                 <h3 class="heading">
-                  <a href="#">10 Tips to clean your window</a>
+                  <a href="#">Suits are Sensitives</a>
                 </h3>
-                <p>
-                  Far far away, behind the word mountains, far from the
-                  countries Vokalia and Consonantia.
-                </p>
+                <p>Handle with Care for a Perfect Wear</p>
               </div>
             </div>
           </div>
@@ -920,12 +916,9 @@
                   </div>
                 </div>
                 <h3 class="heading">
-                  <a href="#">10 Tips to clean your window</a>
+                  <a href="#">Washing Tips</a>
                 </h3>
-                <p>
-                  Far far away, behind the word mountains, far from the
-                  countries Vokalia and Consonantia.
-                </p>
+                <p>Preserve, Protect, and Perfect Your Wardrobe!</p>
               </div>
             </div>
           </div>
