--- a/contact.html
+++ b/contact.html
@@ -144,7 +144,7 @@
         </div>
       </div>
     </section>
-
+    <!-- This is one of the set integers  -->
     <section class="ftco-section bg-light">
       <div class="container">
         <div class="row justify-content-center">
