--- a/index.html
+++ b/index.html
@@ -26,7 +26,339 @@
 
     <link rel="stylesheet" href="css/flaticon.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <style>
+      /* Add your bubble animation CSS here */
+      #background-wrap {
+        bottom: 0;
+        left: 0;
+        position: fixed;
+        right: 0;
+        top: 0;
+        z-index: -1;
+      }
+
+      /* KEYFRAMES */
+
+      @-webkit-keyframes animateBubble {
+        0% {
+          margin-top: 1000px;
+        }
+
+        100% {
+          margin-top: -100%;
+        }
+      }
+
+      @-moz-keyframes animateBubble {
+        0% {
+          margin-top: 1000px;
+        }
+
+        100% {
+          margin-top: -100%;
+        }
+      }
+
+      @keyframes animateBubble {
+        0% {
+          margin-top: 1000px;
+        }
+
+        100% {
+          margin-top: -100%;
+        }
+      }
+
+      @-webkit-keyframes sideWays {
+        0% {
+          margin-left: 0px;
+        }
+
+        100% {
+          margin-left: 50px;
+        }
+      }
+
+      @-moz-keyframes sideWays {
+        0% {
+          margin-left: 0px;
+        }
+
+        100% {
+          margin-left: 50px;
+        }
+      }
+
+      @keyframes sideWays {
+        0% {
+          margin-left: 0px;
+        }
+
+        100% {
+          margin-left: 50px;
+        }
+      }
+
+      /* ANIMATIONS */
+      .x1 {
+        -webkit-animation: animateBubble 25s linear infinite,
+          sideWays 2s ease-in-out infinite alternate;
+        -moz-animation: animateBubble 25s linear infinite,
+          sideWays 2s ease-in-out infinite alternate;
+        animation: animateBubble 25s linear infinite,
+          sideWays 2s ease-in-out infinite alternate;
+        left: -5%;
+        top: 5%;
+        -webkit-transform: scale(0.6);
+        -moz-transform: scale(0.6);
+        transform: scale(0.6);
+      }
+
+      .x2 {
+        -webkit-animation: animateBubble 20s linear infinite,
+          sideWays 4s ease-in-out infinite alternate;
+        -moz-animation: animateBubble 20s linear infinite,
+          sideWays 4s ease-in-out infinite alternate;
+        animation: animateBubble 20s linear infinite,
+          sideWays 4s ease-in-out infinite alternate;
+        left: 5%;
+        top: 80%;
+        -webkit-transform: scale(0.4);
+        -moz-transform: scale(0.4);
+        transform: scale(0.4);
+      }
+
+      .x3 {
+        -webkit-animation: animateBubble 28s linear infinite,
+          sideWays 2s ease-in-out infinite alternate;
+        -moz-animation: animateBubble 28s linear infinite,
+          sideWays 2s ease-in-out infinite alternate;
+        animation: animateBubble 28s linear infinite,
+          sideWays 2s ease-in-out infinite alternate;
+        left: 10%;
+        top: 40%;
+        -webkit-transform: scale(0.7);
+        -moz-transform: scale(0.7);
+        transform: scale(0.7);
+      }
+
+      .x4 {
+        -webkit-animation: animateBubble 22s linear infinite,
+          sideWays 3s ease-in-out infinite alternate;
+        -moz-animation: animateBubble 22s linear infinite,
+          sideWays 3s ease-in-out infinite alternate;
+        animation: animateBubble 22s linear infinite,
+          sideWays 3s ease-in-out infinite alternate;
+        left: 20%;
+        top: 0;
+        -webkit-transform: scale(0.3);
+        -moz-transform: scale(0.3);
+        transform: scale(0.3);
+      }
+
+      .x5 {
+        -webkit-animation: animateBubble 29s linear infinite,
+          sideWays 4s ease-in-out infinite alternate;
+        -moz-animation: animateBubble 29s linear infinite,
+          sideWays 4s ease-in-out infinite alternate;
+        animation: animateBubble 29s linear infinite,
+          sideWays 4s ease-in-out infinite alternate;
+        left: 30%;
+        top: 50%;
+        -webkit-transform: scale(0.5);
+        -moz-transform: scale(0.5);
+        transform: scale(0.5);
+      }
+
+      .x6 {
+        -webkit-animation: animateBubble 21s linear infinite,
+          sideWays 2s ease-in-out infinite alternate;
+        -moz-animation: animateBubble 21s linear infinite,
+          sideWays 2s ease-in-out infinite alternate;
+        animation: animateBubble 21s linear infinite,
+          sideWays 2s ease-in-out infinite alternate;
+        left: 50%;
+        top: 0;
+        -webkit-transform: scale(0.8);
+        -moz-transform: scale(0.8);
+        transform: scale(0.8);
+      }
+
+      .x7 {
+        -webkit-animation: animateBubble 20s linear infinite,
+          sideWays 2s ease-in-out infinite alternate;
+        -moz-animation: animateBubble 20s linear infinite,
+          sideWays 2s ease-in-out infinite alternate;
+        animation: animateBubble 20s linear infinite,
+          sideWays 2s ease-in-out infinite alternate;
+        left: 65%;
+        top: 70%;
+        -webkit-transform: scale(0.4);
+        -moz-transform: scale(0.4);
+        transform: scale(0.4);
+      }
+
+      .x8 {
+        -webkit-animation: animateBubble 22s linear infinite,
+          sideWays 3s ease-in-out infinite alternate;
+        -moz-animation: animateBubble 22s linear infinite,
+          sideWays 3s ease-in-out infinite alternate;
+        animation: animateBubble 22s linear infinite,
+          sideWays 3s ease-in-out infinite alternate;
+        left: 80%;
+        top: 10%;
+        -webkit-transform: scale(0.3);
+        -moz-transform: scale(0.3);
+        transform: scale(0.3);
+      }
+
+      .x9 {
+        -webkit-animation: animateBubble 29s linear infinite,
+          sideWays 4s ease-in-out infinite alternate;
+        -moz-animation: animateBubble 29s linear infinite,
+          sideWays 4s ease-in-out infinite alternate;
+        animation: animateBubble 29s linear infinite,
+          sideWays 4s ease-in-out infinite alternate;
+        left: 90%;
+        top: 50%;
+        -webkit-transform: scale(0.6);
+        -moz-transform: scale(0.6);
+        transform: scale(0.6);
+      }
+
+      .x10 {
+        -webkit-animation: animateBubble 26s linear infinite,
+          sideWays 2s ease-in-out infinite alternate;
+        -moz-animation: animateBubble 26s linear infinite,
+          sideWays 2s ease-in-out infinite alternate;
+        animation: animateBubble 26s linear infinite,
+          sideWays 2s ease-in-out infinite alternate;
+        left: 80%;
+        top: 80%;
+        -webkit-transform: scale(0.3);
+        -moz-transform: scale(0.3);
+        transform: scale(0.3);
+      }
+
+      /* OBJECTS */
+      .bubble {
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+        -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2),
+          inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+        -moz-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2),
+          inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+        box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2),
+          inset 0px 10px 30px 5px rgba(255, 255, 255, 1);
+        height: 200px;
+        position: absolute;
+        width: 200px;
+      }
+
+      .bubble:after {
+        background: -moz-radial-gradient(
+          center,
+          ellipse cover,
+          rgba(255, 255, 255, 0.5) 0%,
+          rgba(255, 255, 255, 0) 70%
+        );
+        background: -webkit-gradient(
+          radial,
+          center center,
+          0px,
+          center center,
+          100%,
+          color-stop(0%, rgba(255, 255, 255, 0.5)),
+          color-stop(70%, rgba(255, 255, 255, 0))
+        );
+        background: -webkit-radial-gradient(
+          center,
+          ellipse cover,
+          rgba(255, 255, 255, 0.5) 0%,
+          rgba(255, 255, 255, 0) 70%
+        );
+        background: -o-radial-gradient(
+          center,
+          ellipse cover,
+          rgba(255, 255, 255, 0.5) 0%,
+          rgba(255, 255, 255, 0) 70%
+        );
+        background: -ms-radial-gradient(
+          center,
+          ellipse cover,
+          rgba(255, 255, 255, 0.5) 0%,
+          rgba(255, 255, 255, 0) 70%
+        );
+        background: radial-gradient(
+          ellipse at center,
+          rgba(255, 255, 255, 0.5) 0%,
+          rgba(255, 255, 255, 0) 70%
+        );
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80ffffff', endColorstr='#00ffffff', GradientType=1);
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+        -webkit-box-shadow: inset 0 20px 30px rgba(255, 255, 255, 0.3);
+        -moz-box-shadow: inset 0 20px 30px rgba(255, 255, 255, 0.3);
+        box-shadow: inset 0 20px 30px rgba(255, 255, 255, 0.3);
+        content: "";
+        height: 180px;
+        left: 10px;
+        position: absolute;
+        width: 180px;
+      }
+      .popup-animated-lines {
+        position: relative;
+        opacity: 0;
+        transform: scale(0.9);
+        animation: popup 1s ease-out forwards;
+      }
+
+      .popup-animated-lines::before,
+      .popup-animated-lines::after {
+        content: "";
+        position: absolute;
+        height: 2px;
+        width: 0;
+        background: #ff6600;
+        animation: drawLines 1s ease-out forwards;
+      }
+
+      .popup-animated-lines::before {
+        top: 0;
+        left: 0;
+        animation-delay: 0.3s;
+      }
+
+      .popup-animated-lines::after {
+        bottom: 0;
+        right: 0;
+        animation-delay: 0.6s;
+      }
+
+      @keyframes popup {
+        0% {
+          opacity: 0;
+          transform: scale(0.9);
+        }
+        100% {
+          opacity: 1;
+          transform: scale(1);
+        }
+      }
+
+      @keyframes drawLines {
+        0% {
+          width: 0;
+        }
+        100% {
+          width: 100%;
+        }
+      }
+    </style>
   </head>
+
   <body>
     <div class="wrap">
       <div class="container">
@@ -125,22 +457,35 @@
       style="background-image: url('images/carousel-1.jpg')"
       data-stellar-background-ratio="0.5"
     >
-      <div class="overlay"></div>
+      <div class="overlay">
+        <div id="background-wrap">
+          <div class="bubble x1"></div>
+          <div class="bubble x2"></div>
+          <div class="bubble x3"></div>
+          <div class="bubble x4"></div>
+          <div class="bubble x5"></div>
+          <div class="bubble x6"></div>
+          <div class="bubble x7"></div>
+          <div class="bubble x8"></div>
+          <div class="bubble x9"></div>
+          <div class="bubble x10"></div>
+        </div>
+      </div>
       <div class="container">
         <div
           class="row no-gutters slider-text js-fullheight align-items-center justify-content-start"
           data-scrollax-parent="true"
         >
-          <div class="col-md-6 ftco-animate">
+          <div class="col-md-6 popup-animated-lines">
             <h2 class="subheading">Leave the Laundry cleaning chores to us</h2>
             <h1 class="mb-4">
               Enjoy one Day Free Pickup and Delivery so that you take care of
               your laundry needs.
             </h1>
             <p>
-              <a href="#" class="btn btn-primary mr-md-4 py-2 px-4"
-                >Learn more <span class="ion-ios-arrow-forward"></span
-              ></a>
+              <a href="#" class="btn btn-primary mr-md-4 py-2 px-4">
+                Learn more <span class="ion-ios-arrow-forward"></span>
+              </a>
             </p>
           </div>
         </div>
@@ -148,13 +493,27 @@
     </div>
 
     <section class="ftco-appointment ftco-section ftco-no-pt ftco-no-pb">
-      <div class="overlay"></div>
+      <div class="overlay">
+        <div id="background-wrap">
+          <div class="bubble x1"></div>
+          <div class="bubble x2"></div>
+          <div class="bubble x3"></div>
+          <div class="bubble x4"></div>
+          <div class="bubble x5"></div>
+          <div class="bubble x6"></div>
+          <div class="bubble x7"></div>
+          <div class="bubble x8"></div>
+          <div class="bubble x9"></div>
+          <div class="bubble x10"></div>
+        </div>
+      </div>
       <div class="container">
         <div class="row d-md-flex justify-content-center">
           <div class="col-md-12">
             <div
               class="wrap-appointment bg-white d-md-flex pl-md-4 pb-5 pb-md-0"
             >
+              <div class="bubbles-container"></div>
               <form action="#" class="appointment w-100">
                 <div class="row justify-content-center">
                   <div
@@ -241,6 +600,23 @@
         </div>
       </div>
     </section>
+    <!-- The text is been set to the main frame of the set  -->
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const bubblesContainer = document.querySelector(".bubbles-container");
+
+        for (let i = 0; i < 20; i++) {
+          const bubble = document.createElement("div");
+          bubble.classList.add("bubble");
+          bubble.style.width = `${Math.random() * 100 + 20}px`;
+          bubble.style.height = bubble.style.width;
+          bubble.style.left = `${Math.random() * 100}%`;
+          bubble.style.animationDuration = `${Math.random() * 10 + 5}s`;
+          bubble.style.animationDelay = `${Math.random() * 10}s`;
+          bubblesContainer.appendChild(bubble);
+        }
+      });
+    </script>
 
     <section class="ftco-section ftco-no-pt ftco-no-pb">
       <div class="container">
@@ -403,13 +779,13 @@
         </div>
       </div>
     </section>
-
     <section class="ftco-section ftco-no-pt">
       <div class="container">
         <div class="row">
           <div class="col-md-12 col-lg-3 pr-md-4 pb-lg-0 pb-4">
             <div class="heading-section ftco-animate text-center text-lg-left">
               <span class="subheading">Team &amp; Staff</span>
+
               <h2>Our Team</h2>
               <p>
                 At Laugh-O-Laundry, we take pride in our teamwork and commitment
@@ -468,6 +844,7 @@
                   </div>
                 </div>
               </div>
+              <!-- The division index is been set col-md-6  -->
               <div class="col-md-6 col-lg-6 ftco-animate d-flex">
                 <div class="staff">
                   <div class="img-wrap d-flex align-items-stretch">
@@ -641,6 +1018,7 @@
                   </div>
                 </div>
               </div>
+              <!-- item -->
               <div class="item">
                 <div class="testimony-wrap py-4">
                   <div
@@ -672,7 +1050,7 @@
         </div>
       </div>
     </section>
-
+    <!-- The Set to the  -->
     <section class="ftco-section ftco-no-pb">
       <div class="container">
         <div class="row justify-content-center pb-5 mb-3">
@@ -832,7 +1210,6 @@
         </div>
       </div>
     </section>
-
     <section class="ftco-section">
       <div class="container">
         <div class="row justify-content-center pb-5 mb-3">
@@ -870,6 +1247,7 @@
               </div>
             </div>
           </div>
+          <!-- The Is a the For the apply for that  -->
           <div class="col-md-6 col-lg-4 d-flex ftco-animate">
             <div class="blog-entry align-self-stretch">
               <a
