--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
+    <!-- The Couples is been subjectories -->
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
       rel="stylesheet"
     />
-
+    <!-- The Couples is been subjectories -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-
+    <!-- The set of integers will be set to the main set of the integers  -->
     <link rel="stylesheet" href="css/animate.css" />
 
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
     <link rel="stylesheet" href="css/magnific-popup.css" />
-
+    <!-- The additional css is been set to the main frame  -->
     <link rel="stylesheet" href="css/flaticon.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/custom.css" />
   </head>
-
   <body>
     <div class="wrap">
       <div class="container">
@@ -271,7 +271,6 @@
       </div>
     </section>
     <!-- The text is been set to the main frame of the set  -->
-
     <section class="ftco-section ftco-no-pt ftco-no-pb">
       <div class="container">
         <div class="row d-flex no-gutters">
