--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <h2 class="subheading">Leave the Laundry cleaning chores to us</h2>
             <h1 class="mb-4">
               Enjoy one Day Free Pickup and Delivery so that you take care of
-              your laundry needs.
+              your laundry needs with minimum orders.
             </h1>
             <p>
               <a href="#" class="btn btn-primary mr-md-4 py-2 px-4">
