--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <!-- END nav -->
     <div
       class="hero-wrap js-fullheight"
-      style="background-image: url('images/carousel-1.jpg')"
+      style="background-image: url('images/Untitled design.jpg')"
       data-stellar-background-ratio="0.5"
     >
       <div class="overlay">
@@ -150,7 +150,7 @@
             <h2 class="subheading">Leave the Laundry cleaning chores to us</h2>
             <h1 class="mb-4">
               Enjoy one Day Free Pickup and Delivery so that you take care of
-              your laundry needs with minimum orders.
+              your laundry needs
             </h1>
             <p>
               <a href="#" class="btn btn-primary mr-md-4 py-2 px-4">
