--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <a href="#" class="nav-link">Services</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Pricing</a>
+              <a href="pricing.html" class="nav-link">Pricing</a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link">Blog</a>
@@ -122,6 +122,8 @@
       </div>
     </nav>
     <!-- END nav -->
+
+    <!-- Hero Section  -->
     <div
       class="hero-wrap js-fullheight"
       style="background-image: url('images/Untitled design.jpg')"
@@ -158,9 +160,22 @@
               </a>
             </p>
           </div>
+          <div class="col-md-6 popup-container">
+            <img
+              src="./images/24hour.png"
+              alt="Popup Image 1"
+              class="popup-image popup-image-1"
+            />
+            <img
+              src="./images/free-shipping-concept-illustration.png"
+              alt="Popup Image 2"
+              class="popup-image popup-image-2"
+            />
+          </div>
         </div>
       </div>
     </div>
+    <!-- Hero section endes here  -->
 
     <section class="ftco-appointment ftco-section ftco-no-pt ftco-no-pb">
       <div class="overlay">
@@ -272,7 +287,7 @@
     </section>
     <!-- The text is been set to the main frame of the set  -->
     <section class="ftco-section ftco-no-pt ftco-no-pb">
-      <div class="container-fluid">
+      <div class="container">
         <div class="row d-flex no-gutters">
           <div class="col-md-6 d-flex">
             <div
@@ -357,6 +372,7 @@
         </div>
       </div>
     </section>
+    <!-- process sections  -->
 
     <section class="ftco-section">
       <div class="container-fluid">
