--- a/pricing.html
+++ b/pricing.html
@@ -147,7 +147,10 @@
       </div>
     </section>
     <div class="container">
-      <h2 style="text-align: center">UNISEX RATE CARD</h2>
+      <div class="col-md-7 heading-section text-center ftco-animate">
+        <span class="subheading mb-3">Price &amp; Plans</span>
+        <h2>UNISEX RATE LIST</h2>
+      </div>
       <table>
         <thead>
           <tr>
@@ -869,7 +872,10 @@
       </table>
     </div>
     <div class="container">
-      <h2 style="text-align: center">KIDS RATE CARD</h2>
+      <div class="col-md-7 heading-section text-center ftco-animate">
+        <span class="subheading mb-3">Price &amp; Plans</span>
+        <h2>RATE LIST FOR KIDS</h2>
+      </div>
       <table>
         <thead>
           <tr>
@@ -1092,7 +1098,10 @@
   </head>
   <body>
   <div class="container">
-    <h2 style="text-align: center">HOUSEHOLD RATE CARD</h2>
+    <div class="col-md-7 heading-section text-center ftco-animate">
+      <span class="subheading mb-3">Price &amp; Plans</span>
+      <h2>HOUSEHOLD RATE CART</h2>
+    </div>
     <table>
       <thead>
         <tr>
