--- a/pricing.html
+++ b/pricing.html
@@ -146,10 +146,11 @@
         </div>
       </div>
     </section>
-    <div class="container">
-      <div class="col-md-7 heading-section text-center ftco-animate">
  
-        <h2 style="text-align: center;">UNISEX RATE LIST</h2>
+  
+    <div class="container">
+      <div class="heading-section text-center ftco-animate">
+        <h2 class="text-center">UNISEX RATE LIST</h2>
       </div>
       <table>
         <thead>
@@ -872,7 +873,7 @@
       </table>
     </div>
     <div class="container">
-      <div class="col-md-7 heading-section text-center ftco-animate">
+      <div class=" heading-section text-center ftco-animate">
         <h2 style="text-align: center;">RATE LIST FOR KIDS</h2>
       </div>
       <table>
@@ -1097,7 +1098,7 @@
   </head>
   <body>
   <div class="container">
-    <div class="col-md-7 heading-section text-center ftco-animate">
+    <div class=" heading-section text-center ftco-animate">
       <h2 style="text-align: center;">HOUSEHOLD RATE CART</h2>
     </div>
     <table>
