--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <!-- Hero Section  -->
     <div
       class="hero-wrap js-fullheight"
-      style="background-image: url('images/Untitled design.jpg')"
+      style="background-image: url('images/icwu_j86v_201102.jpg')"
       data-stellar-background-ratio="0.5"
     >
       <div class="overlay">
@@ -292,7 +292,7 @@
           <div class="col-md-6 d-flex">
             <div
               class="img d-flex align-items-center justify-content-center py-5 py-md-0"
-              style="background-image: url(images/about.jpg)"
+              style="background-image: url(images/51984.jpg)"
             >
               <div class="time-open-wrap">
                 <div class="desc p-4">
