--- a/pricing.html
+++ b/pricing.html
@@ -83,7 +83,7 @@
     >
       <div class="container">
         <a class="navbar-brand" href="index.html"
-          >Cleaning<span>company</span></a
+          >Laugh-<span>O</span>-<span>Laundry</span></a
         >
         <button
           class="navbar-toggler"
