--- a/pricing.html
+++ b/pricing.html
@@ -1340,7 +1340,7 @@
                 </div>
                 <h4 class="heading-2">Starter</h4>
                 <span class="price"
-                  ><sup>$</sup> <span class="number">49</span></span
+                  ><sup>₹</sup> <span class="number">49</span></span
                 >
 
                 <ul class="pricing-text mb-5">
@@ -1371,7 +1371,7 @@
                 </div>
                 <h4 class="heading-2">Standard</h4>
                 <span class="price"
-                  ><sup>$</sup> <span class="number">79</span></span
+                  ><sup>₹</sup> <span class="number">79</span></span
                 >
 
                 <ul class="pricing-text mb-5">
@@ -1402,7 +1402,7 @@
                 </div>
                 <h4 class="heading-2">Premium</h4>
                 <span class="price"
-                  ><sup>$</sup> <span class="number">109</span></span
+                  ><sup>₹</sup> <span class="number">109</span></span
                 >
 
                 <ul class="pricing-text mb-5">
