--- a/index.html
+++ b/index.html
@@ -126,7 +126,10 @@
     <!-- Hero Section  -->
     <div
       class="hero-wrap js-fullheight"
-      style="background-image: url('images/icwu_j86v_201102.jpg')"
+      style="
+        background-image: url('images/icwu_j86v_201102.jpg');
+        background-color: rgba(0, 0, 0, 1);
+      "
       data-stellar-background-ratio="0.5"
     >
       <div class="overlay">
@@ -143,7 +146,7 @@
           <div class="bubble x10"></div>
         </div>
       </div>
-      <div class="container">
+      <div class="container-fluid">
         <div
           class="row no-gutters slider-text js-fullheight align-items-center justify-content-start"
           data-scrollax-parent="true"
@@ -160,14 +163,14 @@
               </a>
             </p>
           </div>
-          <div class="col-md-3 popup-container">
+          <div class="col-md-6 popup-container">
             <img
               src="./images/24hour.png"
               alt="Popup Image 1"
               class="popup-image popup-image-1"
             />
             <img
-              src="./images/free-shipping-concept-illustration.png"
+              src="./images/3.png"
               alt="Popup Image 2"
               class="popup-image popup-image-2"
             />
@@ -1177,6 +1180,20 @@
     </section>
 
     <footer class="footer ftco-section">
+      <div class="overlay">
+        <div id="background-wrap">
+          <div class="bubble x1"></div>
+          <div class="bubble x2"></div>
+          <div class="bubble x3"></div>
+          <div class="bubble x4"></div>
+          <div class="bubble x5"></div>
+          <div class="bubble x6"></div>
+          <div class="bubble x7"></div>
+          <div class="bubble x8"></div>
+          <div class="bubble x9"></div>
+          <div class="bubble x10"></div>
+        </div>
+      </div>
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
