--- a/pricing.html
+++ b/pricing.html
@@ -1320,143 +1320,167 @@
   </div>
   
 
-  
-    <section class="ftco-section bg-light">
-      <div class="container">
-        <div class="row justify-content-center pb-5 mb-3">
-          <div class="col-md-7 heading-section text-center ftco-animate">
-            <span class="subheading mb-3">Price &amp; Plans</span>
-            <h2>Choose Your Perfect Plans</h2>
+  <section class="ftco-section bg-light">
+    <div class="container">
+      <div class="row justify-content-center pb-5 mb-3">
+        <div class="col-md-7 heading-section text-center ftco-animate">
+          <span class="subheading mb-3">Price &amp; Plans</span>
+          <h2>Choose Your Perfect Plans</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 col-lg-3 ftco-animate">
+          <div class="block-7">
+            <div class="text-center">
+              <div
+                class="icon d-flex align-items-center justify-content-center"
+              >
+                <span class="fa flaticon-sprayer"></span>
+              </div>
+              <h4 class="heading-2">Famliy Saver</h4>
+              <span class="price"
+                ><sup>₹</sup> <span class="number">999</span></span
+              >
+
+              <ul class="pricing-text mb-5">
+                <li>
+                  <span class="fa fa-check mr-2"></span>Wash, Fold and Press
+                  Service
+                </li>
+                <li>
+                  <span class="fa fa-check mr-2"></span>stain removal or
+                  garment repairs
+                </li>
+                <li>
+                  <span class="fa fa-check mr-2"></span>weekly for any 5 loads
+                  with 10% discount.
+                </li>
+                <li>
+                  <span class="fa fa-check mr-2"></span>Subscription covers
+                  the cost of 50 loads of laundry per month for family
+                  requirements.
+                </li>
+                <li><span class="fa fa-check mr-2"></span>express service</li>
+              </ul>
+
+              <a href="#" class="btn btn-primary px-4 py-3">Get Started</a>
+            </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-6 col-lg-3 ftco-animate">
-            <div class="block-7">
-              <div class="text-center">
-                <div
-                  class="icon d-flex align-items-center justify-content-center"
-                >
-                  <span class="fa flaticon-sprayer"></span>
-                </div>
-                <h4 class="heading-2">Starter</h4>
-                <span class="price"
-                  ><sup>₹</sup> <span class="number">49</span></span
-                >
-
-                <ul class="pricing-text mb-5">
-                  <li>
-                    <span class="fa fa-check mr-2"></span>Bedrooms cleaning
-                  </li>
-                  <li><span class="fa fa-check mr-2"></span>Vacuuming</li>
-                  <li>
-                    <span class="fa fa-check mr-2"></span>Bathroom cleaning
-                  </li>
-                  <li><span class="fa fa-check mr-2"></span>Mirrow cleaning</li>
-                  <li>
-                    <span class="fa fa-check mr-2"></span>Livingroom cleaning
-                  </li>
-                </ul>
-
-                <a href="#" class="btn btn-primary px-4 py-3">Get Started</a>
+        <div class="col-md-6 col-lg-3 ftco-animate">
+          <div class="block-7 active">
+            <div class="text-center">
+              <div
+                class="icon d-flex align-items-center justify-content-center"
+              >
+                <span class="fa flaticon-vacuum-cleaner"></span>
               </div>
+              <h4 class="heading-2">Premium Plan</h4>
+              <span class="price"
+                ><sup>₹</sup> <span class="number">899</span></span
+              >
+
+              <ul class="pricing-text mb-5">
+                <li>
+                  <span class="fa fa-check mr-2"></span>Wash, dry and steam
+                  press service.
+                </li>
+                <li>
+                  <span class="fa fa-check mr-2"></span>Premium dry-cleaning
+                  service for suits and formal wear.
+                </li>
+                <li>
+                  <span class="fa fa-check mr-2"></span>Subscription includes
+                  unlimited laundry services.
+                </li>
+                <li>
+                  <span class="fa fa-check mr-2"></span>12 loads of laundry
+                  per month for a typical household
+                </li>
+                <li><span class="fa fa-check mr-2"></span>Deep cleaning</li>
+              </ul>
+
+              <a href="#" class="btn btn-primary px-4 py-3">Get Started</a>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 ftco-animate">
-            <div class="block-7 active">
-              <div class="text-center">
-                <div
-                  class="icon d-flex align-items-center justify-content-center"
-                >
-                  <span class="fa flaticon-vacuum-cleaner"></span>
-                </div>
-                <h4 class="heading-2">Standard</h4>
-                <span class="price"
-                  ><sup>₹</sup> <span class="number">79</span></span
-                >
+        </div>
 
-                <ul class="pricing-text mb-5">
-                  <li>
-                    <span class="fa fa-check mr-2"></span>Bedrooms cleaning
-                  </li>
-                  <li><span class="fa fa-check mr-2"></span>Vacuuming</li>
-                  <li>
-                    <span class="fa fa-check mr-2"></span>Bathroom cleaning
-                  </li>
-                  <li><span class="fa fa-check mr-2"></span>Mirrow cleaning</li>
-                  <li>
-                    <span class="fa fa-check mr-2"></span>Livingroom cleaning
-                  </li>
-                </ul>
-
-                <a href="#" class="btn btn-primary px-4 py-3">Get Started</a>
+        <div class="col-md-6 col-lg-3 ftco-animate">
+          <div class="block-7">
+            <div class="text-center">
+              <div
+                class="icon d-flex align-items-center justify-content-center"
+              >
+                <span class="fa flaticon-tap"></span>
               </div>
+              <h4 class="heading-2">Basic</h4>
+              <span class="price"
+                ><sup>₹</sup> <span class="number">49-120</span></span
+              >
+
+              <ul class="pricing-text mb-5">
+                <li>
+                  <span class="fa fa-check mr-2"></span>Wash and fold service
+                  for regular Clothes
+                </li>
+                <li>
+                  <span class="fa fa-check mr-2"></span>Ideal for individuals
+                  or families with busy schedules
+                </li>
+                <li>
+                  <span class="fa fa-check mr-2"></span>hassle-free laundry
+                  solutions
+                </li>
+                <li>
+                  <span class="fa fa-check mr-2"></span>Subscription typically
+                  covers the cost of 5/10
+                </li>
+                <li><span class="fa fa-check mr-2"></span>Deep cleaning</li>
+              </ul>
+
+              <a href="#" class="btn btn-primary px-4 py-3">Get Started</a>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 ftco-animate">
-            <div class="block-7">
-              <div class="text-center">
-                <div
-                  class="icon d-flex align-items-center justify-content-center"
-                >
-                  <span class="fa flaticon-tap"></span>
-                </div>
-                <h4 class="heading-2">Premium</h4>
-                <span class="price"
-                  ><sup>₹</sup> <span class="number">109</span></span
-                >
-
-                <ul class="pricing-text mb-5">
-                  <li>
-                    <span class="fa fa-check mr-2"></span>Bedrooms cleaning
-                  </li>
-                  <li><span class="fa fa-check mr-2"></span>Vacuuming</li>
-                  <li>
-                    <span class="fa fa-check mr-2"></span>Bathroom cleaning
-                  </li>
-                  <li><span class="fa fa-check mr-2"></span>Mirrow cleaning</li>
-                  <li>
-                    <span class="fa fa-check mr-2"></span>Livingroom cleaning
-                  </li>
-                </ul>
-
-                <a href="#" class="btn btn-primary px-4 py-3">Get Started</a>
+        </div>
+        <div class="col-md-6 col-lg-3 ftco-animate">
+          <div class="block-7">
+            <div class="text-center">
+              <div
+                class="icon d-flex align-items-center justify-content-center"
+              >
+                <span class="fa flaticon-cleaning"></span>
               </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 ftco-animate">
-            <div class="block-7">
-              <div class="text-center">
-                <div
-                  class="icon d-flex align-items-center justify-content-center"
-                >
-                  <span class="fa flaticon-cleaning"></span>
-                </div>
-                <h4 class="heading-2">Platinum</h4>
-                <span class="price"
-                  ><sup>$</sup> <span class="number">159</span></span
-                >
+              <h4 class="heading-2">Business Attire</h4>
+              <span class="price"
+                ><sup>₹</sup><span class="number">179</span></span
+              >
 
-                <ul class="pricing-text mb-5">
-                  <li>
-                    <span class="fa fa-check mr-2"></span>Bedrooms cleaning
-                  </li>
-                  <li><span class="fa fa-check mr-2"></span>Vacuuming</li>
-                  <li>
-                    <span class="fa fa-check mr-2"></span>Bathroom cleaning
-                  </li>
-                  <li><span class="fa fa-check mr-2"></span>Mirrow cleaning</li>
-                  <li>
-                    <span class="fa fa-check mr-2"></span>Livingroom cleaning
-                  </li>
-                </ul>
+              <ul class="pricing-text mb-5">
+                <li>
+                  <span class="fa fa-check mr-2"></span>Pickup and delivery of
+                  business attire for professionals
+                </li>
+                <li>
+                  <span class="fa fa-check mr-2"></span>Pressing and garment
+                  steaming included
+                </li>
+                <li>
+                  <span class="fa fa-check mr-2"></span>Subscription typically
+                  includes 8 pieces of business attire per month.
+                </li>
+                <li><span class="fa fa-check mr-2"></span>Deep cleaning</li>
+                <li>
+                  <span class="fa fa-check mr-2"></span>Iron and Dry Cleaning
+                </li>
+              </ul>
 
-                <a href="#" class="btn btn-primary px-4 py-3">Get Started</a>
-              </div>
+              <a href="#" class="btn btn-primary px-4 py-3">Get Started</a>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
     <footer class="footer ftco-section">
       <div class="container">
