--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@
       </div>
     </section>
 
-    <section class="ftco-section bg-light">
+    <section class="ftco-section">
       <div class="container">
         <div class="row justify-content-center pb-5 mb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
@@ -1179,7 +1179,7 @@
       </div>
     </section>
 
-    <footer class="footer ftco-section">
+    <footer class="footer ftco-section footer-cover">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
@@ -1306,9 +1306,11 @@
               <script>
                 document.write(new Date().getFullYear());
               </script>
-              All rights reserved | This template is made with
+              All rights reserved | This Website is made with
               <i class="fa fa-heart" aria-hidden="true"></i> by
-              <a href="" target="_blank">Oishik Dutta</a>
+              <a href="https://cognicierge-solutions.com/" target="_blank"
+                >Cognierge Solutions</a
+              >
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
           </div>
