--- a/pricing.html
+++ b/pricing.html
@@ -130,7 +130,7 @@
       style="background-image: url('images/8178472.jpg')"
       data-stellar-background-ratio="0.5"
     >
-      <div class="overlay"></div>
+      <div class="overlay" ></div>
       <div class="container">
         <div class="row no-gutters slider-text align-items-end">
           <div class="col-md-9 ftco-animate pb-5">
@@ -147,7 +147,7 @@
       </div>
     </section>
  
-  
+  <section class="table-cover">
     <div class="container">
       <div class="heading-section text-center ftco-animate">
         <h2 class="text-center">UNISEX RATE LIST</h2>
@@ -872,7 +872,7 @@
         </tbody>
       </table>
     </div>
-    <div class="container">
+    <div class="container" >
       <div class=" heading-section text-center ftco-animate">
         <h2 style="text-align: center;">RATE LIST FOR KIDS</h2>
       </div>
@@ -1318,9 +1318,9 @@
       <button id="checkout">Proceed to Checkout</button>
     </div>
   </div>
-  
+</section>
 
-  <section class="ftco-section bg-light">
+  <section class="ftco-section table-cover">
     <div class="container">
       <div class="row justify-content-center pb-5 mb-3">
         <div class="col-md-7 heading-section text-center ftco-animate">
@@ -1482,7 +1482,7 @@
     </div>
   </section>
 
-    <footer class="footer ftco-section">
+    <footer class="footer ftco-section table-cover">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
